﻿[B]Changelog[/B]
* Fixed: NPO listings broke (Fixes #1233)
* Fixed: Times did not show correctly for NPO due to ending of DST

[I]Previous Changes[/I]
* Fixed: some NPO Start shows don't have a title in the metadata, which broken parsing (Fixes #1196)
* Added: support for more profiles in NPO start (Fixes #1197)
* Updated: NPO Start is now localized for most of the strings
* Added: Show NPO Start error messages to user (See #1197)
* Changed: removed NTR School TV for now as it is no longer working and they retired their JSON api
* Added: allow playback of NPO Plus content if you are logged in with an NPO Plus account (Fixes #1132)
* Fixed: using API now so we get descriptions for videos (Fixes #1182)
* Fixed: NPO genres would list shows as videos (Fixes #1172)
* Fixed: NPO radio would not list
* Fixed: Date parsing in NPO Start (Fixes #1152)
* Fixed: NPO video would now show in some occasions.
* Fixed: For some NPO live streams the audio stops after some time (Fixes #1134)
* Fixed: timestamp issue with cookies in NPO Channel (Fixes #1136)
* Fixed: some dates in the previous years did not show correct (Fixes #1129)
* Fixed: NPO now uses Widevine streams only. Older items are no longer available without a paid account (Fixes #1114)
* Fixed: some radio live streams did not play (Fixes #1108)
* Added: Warning for Kodi installations without decryption support that want to play live streams in NPOO (See #1099)
* Fixed: subs would not show if InputStream Adaptive is enabled (Fixes #1082)
* Fixed: NPO Complete listing (Fixes #1079)
* Changed: use InputStream Adaptive for NPO (Fixes #1073)
* Fixed: NPO live radio streams (Fixes #1061)
* Changed: renamed Uitzendinggemist to NPO Start (Fixes #1059)
* Fixed: NOS.nl streams did not start (Fixes #1048)
* Fixed: NPO shows within `Genres` would not list any items (Fixes #1037)
* Fixed: no images for A-Z listing (Fixes #1010)
* Changed: Moved `recent` items to own folder