@@ -1,8 +1,10 @@
 ﻿[B]Changelog[/B]
-* Fixed: NPO listings broke (Fixes #1233)
-* Fixed: Times did not show correctly for NPO due to ending of DST
+* Fixed: add time to 'NPO Journaal' items (Fixes #1253)
+* Added: use pytz to generate dates on a 'broadcast-date' base (See #1251)
 
 [I]Previous Changes[/I]
+* Fixed: NPO listings broke (Fixes #1233)
+* Fixed: Times did not show correctly for NPO due to ending of DST
 * Fixed: some NPO Start shows don't have a title in the metadata, which broken parsing (Fixes #1196)
 * Added: support for more profiles in NPO start (Fixes #1197)
 * Updated: NPO Start is now localized for most of the strings
